# qtev3

./: .gitignore  .mainwindow.cpp.swp  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  answer.cpp  answer.h  cmake_install.cmake  completer.pro  execute.sh  formulaview.cpp  formulaview.h  fraction.cpp  fraction.h  lexertk.h  main.cpp  mainwindow.cpp  mainwindow.h  parentheses.cpp  parentheses.h  qrc_completer.cpp  qtev3  qwt_mml_document.h  qwt_mml_entity_table.cpp  qwt_mml_entity_table.h  qwtq  remap.cpp  remap.h
Cmake/Modules/: FindQtMmlQt4.cmake  FindQwt.cmake
ev3/: auxiliary.h  common.h  expression.cpp  expression.h  operand.h  parser.h  tree.h
mml/: QuadraticFormula.mml
qwtq_autogen/: mocs_compilation.cpp
qwtq_autogen/EWIEGA46WW/: moc_formulaview.cpp  moc_mainwindow.cpp
